--- a/site sport/index.html
+++ b/site sport/index.html
@@ -6,39 +6,42 @@
     <link rel="stylesheet" type="text/css" href="css/style.css" />
   </head>
   <body>
-    <header>
-      <nav class="navigation">
-        <!-- gauche -->
+    <nav class="nav">
+      <!-- gauche -->
+      <div class="logo">
+        <h4>No limits</h4>
+      </div>
+      <!-- droite -->
 
-        <label class="gauche">No limits</label>
+      <ul class="nav-links">
+        <li class="item">
+          <a href="#" style="text-decoration: none">Sans matériel</a>
+        </li>
 
-        <!-- droite -->
-        <ul class="droite">
-          <li class="item">
-            <a href="#" style="text-decoration: none">Sans matériel</a>
-          </li>
-          <li class="item">
-            <a href="#" style="text-decoration: none">Haltéres-seul</a>
-          </li>
-          <li class="item">
-            <a href="#" style="text-decoration: none">En salle</a>
-          </li>
-          <li class="item">
-            <a href="#" style="text-decoration: none"
-              >Powerlifting-initiation</a
-            >
-          </li>
-          <li class="item">
-            <a href="#" style="text-decoration: none">Programme personnalisé</a>
-          </li>
-          <li class="item">
-            <a href="#" style="text-decoration: none">Contact</a>
-          </li>
-          <li class="toggle">
-            <span class="bars"></span>
-          </li>
-        </ul>
-      </nav>
-    </header>
+        <li class="item">
+          <a href="#" style="text-decoration: none">Haltéres-seul</a>
+        </li>
+
+        <li class="item">
+          <a href="#" style="text-decoration: none">En salle</a>
+        </li>
+
+        <li class="item">
+          <a href="#" style="text-decoration: none">Powerlifting-initiation</a>
+        </li>
+
+        <li class="item">
+          <a href="#" style="text-decoration: none">Programme personnalisé</a>
+        </li>
+
+        <li class="item">
+          <a href="#" style="text-decoration: none">Contact</a>
+        </li>
+      </ul>
+      <div class="burger">
+        <div class="line1"></div>
+      </div>
+    </nav>
+    <script src="js.js"></script>
   </body>
 </html>
